# GhostZip

./: .gitignore  DEPLOYMENT.md  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.ts
scratch/: rewrite_extract.py  rewrite_frontend.py
scripts/: vite-runner.mjs
src/: App.tsx  styles.css  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/engine/: archive.rs  constants.rs  errors.rs  extract.rs  mod.rs  purge.rs  reader.rs  scheduler.rs  session.rs  sevenzip_cli.rs  sparse.rs  storage.rs
src-tauri/windows/: nsis-hooks.nsh
src/components/: Analysis.tsx  Completion.tsx  DropZone.tsx  Extraction.tsx  GhostLogo.tsx  LandingPage.css  LandingPage.tsx  SettingsPanel.tsx  Sidebar.tsx
src/hooks/: useExtraction.ts  useTheme.ts
