[package]
name = "ghostzip"
version = "0.1.0"
description = "Space-aware archive extraction desktop app"
authors = ["GhostZip"]
edition = "2021"

[lib]
name = "ghostzip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
base64 = "0.22"
bzip2 = "0.4"
crc32fast = "1.5.0"
flate2 = "1.0"
infer = "0.16"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sevenz-rust = "0.6"
sysinfo = "0.33"
tar = "0.4"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-dialog = "2.2"
tauri-plugin-opener = "2.2"
thiserror = "1"
uuid = { version = "1.11", features = ["v4", "serde"] }
walkdir = "2"
windows-sys = { version = "0.61.2", features = ["Win32_System_Ioctl", "Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO"] }
xz2 = "0.1"
zip = "2.2"

[dev-dependencies]
tempfile = "3.14"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
